Fix nav item spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,10 +24,8 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   font-size: 0.7rem;
-
-
-  @include media-breakpoint-up(md) {
-    &::last-of-type {
+  &.last {
+    @include media-breakpoint-up(md) {
       margin-left: 30px;
     }
   }
